syntax = "proto3";
package options.gloo.solo.io;
option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/options";

import "gogoproto/gogo.proto";

import "github.com/solo-io/gloo/projects/gloo/api/v1/options/rest/rest.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/grpc/grpc.proto";

option (gogoproto.equal_all) = true;

// Describes APIs and application-level information for services
// Gloo routes to. ServiceSpec is contained within the UpstreamSpec for certain types
// of upstreams, including Kubernetes, Consul, and Static.
// ServiceSpec configuration is opaque to Gloo and handled by Service Options.
message ServiceSpec {
    // Note to developers: new Service Options must be added to this oneof field
    // to be usable by Gloo.
    oneof plugin_type {
        rest.options.gloo.solo.io.ServiceSpec rest = 1;
        grpc.options.gloo.solo.io.ServiceSpec grpc = 2;
    }
}